examples/test/testpolicy6732.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6732
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key4: value30
      key21: value33
      key1: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value33
          key21: value20
          key5: value45
      podSelector:
        matchLabels:
          key41: value42
          key35: value11
          key36: value23
